--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,24 @@ body {
   background-repeat: no-repeat;
   min-height: 100vh; }
 
+/* Logo */
+.logo {
+  height: 3.25rem; }
+
+/* Search */
+.search__icon {
+  height: 2rem;
+  width: 2rem; }
+
+/* User navigation */
+.user-nav__icon {
+  height: 2.25rem;
+  width: 2.25rem; }
+
+.user-nav__user-photo {
+  height: 3.75rem;
+  border-radius: 50%; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
