After class 76 "Building the Header - Part 2"

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,7 +9,7 @@ Primary dark: #BA265D
 Grey light 1: #FAF9F9
 Grey light 2: #F4F2F2
 Grey light 3: #F0EEEE
-Grey light 4: #EEE
+Grey light 4: #CCC
 
 Grey dark 1: #333
 Grey dark 2: #777
@@ -25,7 +25,7 @@ Grey dark 3: #999
     --color-grey-light-1: #FAF9F9;
     --color-grey-light-2: #F4F2F2;
     --color-grey-light-3: #F0EEEE;
-    --color-grey-light-4: #EEE;
+    --color-grey-light-4: #CCC;
     
     --color-grey-dark-1: #333;
     --color-grey-dark-2: #777;
