--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,22 +2,64 @@
 
 .logo {
      height: 3.25rem;
+     margin-left: 3rem;
 }
 
 /* Search */
 
 .search {
-    &__input {
+    flex: 0 0 40%;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &__input {
+        font-family: inherit;
+        font-size: inherit;
+        color: inherit;
+        background-color: var(--color-grey-light-2);
+        border: none;
+        padding: .7rem 2rem;
+        border-radius: 100px;
+        width: 90%;
+        transition: all .2s;
+        margin-right: -3.25rem; //To put the magnifying glass over the input.
+
+        //To make the input grow when focused on.
+        &:focus {
+            outline: none;
+            width: 100%;
+            background-color: var(--color-grey-light-3);
+        }
+
+        &::-webkit-input-placeholder {
+            font-weight: 100;
+            color: var(--color-grey-light-4);
+        }
+    }
+
+    &__input:focus + &__button {
+        background-color: var(--color-grey-light-3);
     }
 
     &__button {
+        border: none;
+        background-color: var(--color-grey-light-2);
 
+        &:focus {
+            outline: none;
+        }
+
+        &:active {
+            transform: translateY(2px); //To put the magnifying glass over the input.
+        }
     }
 
     &__icon {
         height: 2rem;
         width: 2rem;
+        fill: var(--color-grey-dark-3);
     }
 }
 
@@ -25,6 +67,8 @@
 /* User navigation */
 
 .user-nav {
+    background-color: yellowgreen;
+
     &__icon-box {
 
     }
