--- a/css/style.css
+++ b/css/style.css
@@ -52,12 +52,12 @@ body {
   background-repeat: no-repeat;
   min-height: 100vh; }
 
-/* Logo */
+/* LOGO */
 .logo {
   height: 3.25rem;
   margin-left: 2rem; }
 
-/* Search */
+/* SEARCH */
 .search {
   flex: 0 0 40%;
   display: flex;
@@ -95,7 +95,7 @@ body {
     width: 2rem;
     fill: var(--color-grey-dark-3); }
 
-/* User navigation */
+/* USER NAVIGATION */
 .user-nav {
   align-self: stretch;
   display: flex;
@@ -132,6 +132,17 @@ body {
     border-radius: 50%;
     margin-right: 1rem; }
 
+/* SIDE NAVIGATION */
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem; }
+
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.5rem; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -153,9 +164,13 @@ body {
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
   background-color: #FFF;
   background-color: orangered;
+  height: 80rem;
   flex: 1; }
