--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,23 @@ body {
   text-align: center;
   padding: 2.5rem; }
 
+/* GALLERY */
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
+
+/* HOTEL OVERVIEW */
+.overview {
+  display: flex; }
+  .overview__stars {
+    margin-right: auto; }
+  .overview__icon-star, .overview__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary); }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -206,6 +223,5 @@ body {
 
 .hotel-view {
   background-color: #FFF;
-  background-color: orangered;
   height: 80rem;
   flex: 1; }
