--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,6 +37,10 @@ Grey dark 3: #999
     --line: 1px solid var(--color-grey-light-2);
 }
 
+$bp-largest: 75em; // 1200px
+$bp-large: 68.75em; // 1100px
+$bp-medium: 66.25em; // 900px
+
 * {
     margin: 0;
     padding: 0;
@@ -50,7 +54,11 @@ Grey dark 3: #999
 
 html {
     box-sizing: border-box;
-    font-size: 62.5%; //1rem = 10px;
+    font-size: 62.5%; // 1rem = 10px;
+
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%; // 8/16 = 50%
+    }
 }
 
 body {
