--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,4 +1,4 @@
-/* 
+/*
 
 COLORS:
 
@@ -18,59 +18,63 @@ Grey dark 3: #999
 */
 
 :root {
-    --color-primary: #EB2F64;
-    --color-primary-light: #FF3366;
-    --color-primary-dark: #BA265D;
+	--color-primary: #eb2f64;
+	--color-primary-light: #ff3366;
+	--color-primary-dark: #ba265d;
 
-    --color-grey-light-1: #FAF9F9;
-    --color-grey-light-2: #F4F2F2;
-    --color-grey-light-3: #F0EEEE;
-    --color-grey-light-4: #CCC;
-    
-    --color-grey-dark-1: #333;
-    --color-grey-dark-2: #777;
-    --color-grey-dark-3: #999;
-    
-    --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
-    --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
+	--color-grey-light-1: #faf9f9;
+	--color-grey-light-2: #f4f2f2;
+	--color-grey-light-3: #f0eeee;
+	--color-grey-light-4: #ccc;
 
-    --line: 1px solid var(--color-grey-light-2);
+	--color-grey-dark-1: #333;
+	--color-grey-dark-2: #777;
+	--color-grey-dark-3: #999;
+
+	--shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+	--shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+
+	--line: 1px solid var(--color-grey-light-2);
 }
 
-$bp-largest: 75em;   // 1200px
-$bp-large: 68.75em;  // 1100px
+$bp-largest: 75em; // 1200px
+$bp-large: 68.75em; // 1100px
 $bp-medium: 66.25em; // 900px
-$bp-small: 37.5em;   // 600px
-$bp-smallest: 31.25em;  // 500px
+$bp-small: 37.5em; // 600px
+$bp-smallest: 31.25em; // 500px
 
 * {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 html {
-    box-sizing: border-box;
-    font-size: 62.5%; // 1rem = 10px;
+	box-sizing: border-box;
+	font-size: 62.5%; // 1rem = 10px;
 
-    @media only screen and (max-width: $bp-large) {
-        font-size: 50%; // 8/16 = 50%
-    }
+	@media only screen and (max-width: $bp-large) {
+		font-size: 50%; // 8/16 = 50%
+	}
 }
 
 body {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 400;
-    line-height: 1.6;
-    color: var(--color-grey-dark-2);
-    background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
-    background-size: cover;
-    background-repeat: no-repeat;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 400;
+	line-height: 1.6;
+	color: var(--color-grey-dark-2);
+	background-image: linear-gradient(
+		to right bottom,
+		var(--color-primary-light),
+		var(--color-primary-dark)
+	);
+	background-size: cover;
+	background-repeat: no-repeat;
 
-    min-height: 100vh;
+	min-height: 100vh;
 }
